--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test page for doudou.css</title>
 
-    <link rel="stylesheet" href="dist/doudou.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/h2y/doudou.css/master/dist/doudou.min.css">
     <style>
         body {
             padding:  1rem 2rem 10rem;
