--- a/test.html
+++ b/test.html
@@ -1,3 +1,12 @@
+<!--
+    这个文件用于本地开发时进行效果测试。
+
+    https://h2y.github.io/doudou.css/test.html
+    而这个链接用于为用户在线演示 doudou.css 的使用效果。
+
+    除了第 18 行外，该文件在两个分支中应当完全一致。
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
