--- a/test.html
+++ b/test.html
@@ -1,3 +1,12 @@
+<!--
+    这个文件用于本地开发时进行效果测试。
+
+    https://h2y.github.io/doudou.css/test.html
+    而这个链接用于为用户在线演示 doudou.css 的使用效果。
+
+    除了第 18 行外，该文件在两个分支中应当完全一致。
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test page for doudou.css</title>
 
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/h2y/doudou.css/master/dist/doudou.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/h2y/doudou.css/1.x/dist/doudou.min.css">
     <style>
         body {
             padding:  1rem 2rem 10rem;
@@ -84,10 +93,10 @@ console.log(<samp>`hello ${hello}!`</samp>);</pre>
     <hr>
 
     <h2>嵌入内容</h2>
-        <p>img</p>
+        <h3>img</h3>
         <img src="https://q1.qlogo.cn/g?b=qq&nk=243806061&s=160&t=1409739994" alt="img">
-        <p>iframe</p>
-        <iframe src="http://ip.cn" width="800" height="400"></iframe>
+        <h3>iframe</h3>
+        <iframe src="https://www.w3schools.com/" width="800" height="400"></iframe>
     <hr>
 
     <h2>表格</h2>
