--- a/test.html
+++ b/test.html
@@ -93,10 +93,10 @@ console.log(<samp>`hello ${hello}!`</samp>);</pre>
     <hr>
 
     <h2>嵌入内容</h2>
-        <p>img</p>
+        <h3>img</h3>
         <img src="https://q1.qlogo.cn/g?b=qq&nk=243806061&s=160&t=1409739994" alt="img">
-        <p>iframe</p>
-        <iframe src="http://ip.cn" width="800" height="400"></iframe>
+        <h3>iframe</h3>
+        <iframe src="https://www.w3schools.com/" width="800" height="400"></iframe>
     <hr>
 
     <h2>表格</h2>
